What's New for OpenJPIP

* : fixed
- : removed
! : changed
+ : added

August 25, 2011
+ [kaori] added tid request support to JPIP client
+ [kaori] added quit JPIP server request

August 24, 2011
+ [kaori] added cachemodel_manager, which had been managed in target_manager previously
+ [kaori] added tid request support to JPIP server

August 16, 2011
* [antonin] fixed cmake support for openjpip

August 12, 2011
+ [antonin] added cmake support to openjpip

July 6, 2011
* [antonin] JPIP : fixed autotools to work with recent name changes

July 5, 2011
! [kaori] changed parameter, file names, message names regarding JPT-stream to JPIP-stream, which handles also JPP-stream

May 26, 2011
! [antonin] changed Makefile to Makefile.nix to avoid having autotools overwrite them.

May 23, 2011
+ [antonin] added autotools for the 'tools' directory
+ [antonin] added autotools as a build method for jpip (credit to Vincent Torri)

May 10, 2011
! [kaori] opj_viewer removed the xml functions (for users without Xersus2)
+ [kaori] renamed opj_viewer  to opj_viewer_xerces ( needs Xersus2)
! [kaori] Modification of opj_dec_server to be portable to windows  

May 9, 2011
* [kaori] Removal of c99 from the compile option (to be compatible to win platform) and bool definition in libopenjpip/bool.h

May 9, 2011
* [antonin] OpenJPIP: small bug fixes to compile on win platform

May 8, 2011
* [antonin] OpenJPIP: fixed several bugs in opj_server (removal of strsep function, duplication of query string) + some changes to compile opj_server under windows (replacement of strcasecmp(), bzero()).

April 14, 2011
+ [antonin] initial commit of OpenJPIP 1.0, a JPIP client-server architecture based on OpenJPEG (see README file in jpip directory for more details)