@@ -5,6 +5,9 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+August 26, 2011
+! [kaori] fixed Makefile.nix to load openjpeg library from this archive
+
 August 25, 2011
 + [kaori] added tid request support to JPIP client
 + [kaori] added quit JPIP server request
